[package]
name = "crabtask"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Ahlert"]
description = "A simple, fast TUI To-Do list written in Rust (a.k.a. OxiDo)"
repository = "https://github.com/GabrielAhlert/crabtask"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"

[profile.release]
opt-level = 3
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
